# gimbal_control

./: .gitmodules  CMakeLists.txt  conftest.py  package.xml
config/: default_params.yaml  test_params.yaml
gimbal_ros2/: gimbal_node.py  suspendable_thread.py
gimbal_ros2/archive/: gimbal_node_old.py
launch/: gimbal_launch.launch.py
scripts/: gimbal_driver.py
test/: test_dynamixel_motor_connection.py  test_dynamixel_registers.py  test_gimbal_connection_topics.py  test_gimbal_end_to_end.py  test_gimbal_launch_params.py  test_gimbal_node_driver.py  test_gimbal_registers.py  test_motor_connection.py  test_u2d2_connection.py
