<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"
?>
<package format="3">
    <name>gimbal_ros2</name>
    <version>0.0.0</version>
    <description>
        A ROS2 package to control a 2 DOF (pan and tile) camera gimbal
    </description>
    <maintainer email="smock@ucla.edu">Stephen Mock</maintainer>
    <license>MIT</license>

    <!--ROS Packages-->
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>builtin_interfaces</depend>
    <exec_depend>ros2launch</exec_depend>

    <!--Other Packages-->
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-yaml</exec_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!--installing my python package-->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!--unit tests -->
    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>pytest</test_depend>
    <test_depend>python3-pytest</test_depend>

      <!-- integration tests -->
    <test_depend>ament_cmake_ros</test_depend>
    <test_depend>launch</test_depend>
    <test_depend>launch_ros</test_depend>
    <test_depend>launch_testing</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <test_depend>rclpy</test_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
